# smart-label

./: .dockerignore  .env.example  .gitignore  06_kyle.py  12_dumpling.py  CONTRIBUTING.md  Dockerfile  README.md  create_test_data.py  docker-compose.yml  git_homework.py  main.py  pyproject.toml  stubby.md  try.py  組員先看.html
MySQL/: init.sql
app/: __init__.py  config.py  models.py  repository.py  repository_mysql.py  utils.py
app/ml/: GroundingDINO.py  active_learning.py  classifier.py  embedding.py  sam.py  yolo_world.py
app/ml/GroundingDINO/: setup.py
app/ml/GroundingDINO/groundingdino/models/GroundingDINO/: bertwarper.py  ms_deform_attn.py  transformer.py  utils.py
app/ml/GroundingDINO/groundingdino/util/: inference.py  misc.py  utils.py
app/routes/: __init__.py  auth.py  export.py  images.py  jobs.py  labels.py  liff.py  line_bot.py  linebot.py  review.py  segment.py
app/services/: exporter.py  gemini.py  jobs.py  line_login.py  mailer.py  pipeline.py
app/static/css/: liff.css  style.css
app/static/js/: app.js
app/templates/: index.html  login.html  register.html  verify.html
app/templates/liff/: upload.html
docs/: db_spec.xlsx  gcp-feasibility-plan.md  week1.html  week2.html  week3.html  week4.html  組員先看.html
history/: work_log.md
scripts/: migrate_json_to_mysql.py
tests/: benchmark_Yolo_DINO.py  benchmark_accuracy.py  benchmark_sam.py  sam_comparison_report.md  test_api_auth.py  test_batch_api.py  test_classifier.py  test_dinov2.py  test_export.py  test_jobs.py  test_ownership.py  test_parameters_api.py  test_pipeline.py  test_sam.py
