[project]
name = "smart-label"
version = "0.1.0"
description = "智慧分割標記助手 — SAM 驅動的 AI 影像標記網頁"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "line-bot-sdk>=3.24.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
