[project]
name = "smart-label"
version = "0.1.0"
description = "智慧分割標記助手 — SAM 驅動的 AI 影像標記網頁"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "matplotlib>=3.11.0",
    "mobile-sam",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "scikit-learn>=1.9.0",
    "timm>=1.0.27",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "ultralytics>=8.4.89",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*xFormers is not available.*:UserWarning",
]

[tool.uv.sources]
mobile-sam = { git = "https://github.com/ChaoningZhang/MobileSAM.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
