[project]
name = "smart-label"
version = "0.1.0"
description = "智慧分割標記助手 — SAM 驅動的 AI 影像標記網頁"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "google-cloud-storage>=3.13.0",
    "gunicorn>=26.0.0",
    "line-bot-sdk>=3.24.0",
    "matplotlib>=3.11.0",
    "mobile-sam",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "timm>=1.0.27",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "ultralytics>=8.4.89",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*xFormers is not available.*:UserWarning",
]

[tool.uv.sources]
mobile-sam = { git = "https://github.com/ChaoningZhang/MobileSAM.git" }
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
